moved title out of left bar for better layout

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 
 	<style type="text/css">
 		#leftBar{
-			margin-top: 0px;
+			margin-top: 15px;
 			margin-left: 0px;
 			height: 100%;
 			min-width: 180px;
@@ -41,17 +41,20 @@
 
 		#siteTitle{
 			font-family: "Rockwell", serif;
+			font-size: 56px;
 			font-weight: normal;
+			margin-top: 10px
 		}
 
 		#categoryLinks{
 			font-family: "Futura", sans-serif;
-			font-size: 18px;
+			font-size: 28px;
+			margin-bottom: 10px;
 
 		}
 
 		#portfolioBoard{
-			margin-top: 36px;
+			margin-top: 5px;
 		}
 
 	
@@ -61,13 +64,15 @@
 </head>
 <body>
 	<div class="container-fluid" id="pageContainer">
-
+		<h1 id="siteTitle">Clay Corbett</h1>
 
 		<div class="row-fluid">
 			<div class="span2" id="leftBar">
-				<h1 id="siteTitle">Clay Corbett</h1>
+				
 				<ul class="unstyled">
-					<li><a href="portfolio.html" id="categoryLinks">: portfolio</a></li>
+					<li id="categoryLinks"><a href="portfolio.html" id="categoryLinks">:portfolio</a></li>
+					<li id="categoryLinks"><a href="portfolio.html" id="categoryLinks">resume</a></li>
+					<li id="categoryLinks"><a href="portfolio.html" id="categoryLinks">contact</a></li>
 				</ul>
 			</div>
 
