fixed image file extensions. all lowercase

--- a/main.html
+++ b/main.html
@@ -80,14 +80,14 @@
 				<ul class="thumbnails">
 					<li class="span3">
 						<div class="thumbnail">
-							<img src="img/LxD-Transparent-200x200.JPG" alt="">
+							<img src="img/LxD-Transparent-200x200.jpg" alt="">
 							<p id="portfolioBoardText">Active Air Suspension</p>
 						</div>
 					</li>
 
 					<li class="span3">
 						<div class="thumbnail">
-							<img src="img/LxD-Transparent-200x200.JPG" alt="">
+							<img src="img/LxD-Transparent-200x200.jpg" alt="">
 							<p id="portfolioBoardText">OptimumK</p>
 						</div>
 					</li>
@@ -108,13 +108,13 @@
 
 					<li class="span3">
 						<div class="thumbnail">
-							<img src="img/FSAE-200x200.JPG" alt="">
+							<img src="img/FSAE-200x200.jpg" alt="">
 							<p id="portfolioBoardText">Formula SAE</p>
 						</div>
 
 					<li class="span3">
 						<div class="thumbnail">
-							<img src="img/SwitchPlate-200x200.JPG" alt="">
+							<img src="img/SwitchPlate-200x200.jpg" alt="">
 							<p id="portfolioBoardText">Switch Plates</p>
 						</div>
 					</li>
