--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			text-align: center;
 		}
 
+		body{
+			background-color: #505050;
+		}
 		#siteTitle{
 			font-family: "Rockwell", serif;
 			font-weight: normal;
@@ -47,7 +50,7 @@
 			margin-top: 5px;
 			margin-bottom: 5px;
 			font-variant: small-caps;
-			color: #505050;
+			color: #DCDCDC;
 		}
 
 		#categoryLinks:link{
@@ -55,7 +58,7 @@
 			font-weight: bold;
 			font-size: 16px;
 			margin-bottom: 10px;
-			color: #505050;
+			color: #DCDCDC;
 
 		}
 
