title color change

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			margin-top: 5px;
 			margin-bottom: 5px;
 			font-variant: small-caps;
-			color: #DCDCDC;
+			color: #FFFFFF;
 		}
 
 		#categoryLinks:link{
