--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 
 		#portfolioBoardText{
 			font-family: "Futura", sans-serif;
-			color: #444;
-
 			text-align: center;
 		}
 
@@ -36,7 +34,7 @@
 			/*font-family: "Rockwell", serif;*/
 			/*font-weight: normal;*/
 			font-family:'Rockwell W01 Light';
-			font-size: 60px;
+			font-size: 42px;
 			font-variant: small-caps;
 			color: #444;
 			margin-top: 5px;
@@ -48,6 +46,7 @@
 			font-weight: bold;
 			font-size: 16px;
 			color: #ccc;
+			margin-left: 5px;
 
 		}
 
@@ -59,7 +58,9 @@
 		}
 
 
-		#portfolioBoard{
+		#portfolioItem{
+			/*border-style: none;*/
+			border-radius: 15px;
 		}
 
 
@@ -79,7 +80,7 @@
 	<div class="row">
 		<div class="span2">
 			<ul class="unstyled" id="linkTable">
-				<li><a href="index.html" id="categoryLinksActive">PORTFOLIO</a></li>
+				<li><a href="index.html" id="categoryLinks">PORTFOLIO</a></li>
 				<li><a href="resume.html" id="categoryLinks">RESUME</a></li>
 				<li><a href="contact.html" id="categoryLinks">CONTACT</a></li>
 			</ul>
@@ -88,41 +89,41 @@
 		<div class="span10">
 			<ul class="thumbnails">
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/LxD-Transparent-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Active Air Suspension</p>
 					</div>
 				</li>
 
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/LxD-Transparent-200x200.jpg" alt="">
 						<p id="portfolioBoardText">OptimumK</p>
 					</div>
 				</li>
 					
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/PCU-200x200.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
 						<p id="portfolioBoardText">Pneumatic Control Units</p>
 					</div>
 				</li>
 				
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/IMG_0370.jpg" alt="" id="portfolioBoardImage">
 						<p id="portfolioBoardText">Valves and Actuators</p>
 					</div>
 				</li>
 
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/FSAE-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Formula SAE</p>
 					</div>
 
 				<li class="span5">
-					<div class="thumbnail">
+					<div class="thumbnail" id="portfolioItem">
 						<img src="img/SwitchPlate-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Switch Plates</p>
 					</div>
