added cname file to use claycorbett.com

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 		}
 
 		#siteTitle{
-			/*font-family: "Rockwell", serif;*/
-			/*font-weight: normal;*/
-			font-family:'Rockwell W01 Light';
+			font-family: "Rockwell", serif;
+			/*font-family:'Rockwell W01 Light';*/
 			font-size: 42px;
 			font-variant: small-caps;
 			color: #444;
