--- a/index.html
+++ b/index.html
@@ -44,9 +44,26 @@
 			font-family: "Futura", sans-serif;
 			font-weight: bold;
 			font-size: 16px;
-			color: #ccc;
+			color: #aaa;
 			margin-left: 5px;
 
+		}
+
+
+		#categoryLinks:hover{
+			font-family: "Futura", sans-serif;
+			font-weight: bold;
+			font-size: 16px;
+			color: #ccc;
+			margin-left: 5px;
+		}
+
+		#categoryLinksCurrent{
+			font-family: "Futura", sans-serif;
+			font-weight: bold;
+			font-size: 16px;
+			color: #cca500;
+			margin-left: 5px;
 		}
 
 		#subheading{
@@ -79,7 +96,7 @@
 	<div class="row">
 		<div class="span2">
 			<ul class="unstyled" id="linkTable">
-				<li><a href="index.html" id="categoryLinks">PORTFOLIO</a></li>
+				<li><a href="index.html" id="categoryLinksCurrent">PORTFOLIO</a></li>
 				<li><a href="resume.html" id="categoryLinks">RESUME</a></li>
 				<li><a href="contact.html" id="categoryLinks">CONTACT</a></li>
 			</ul>
