--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 		<div class="span10">
 			<ul class="thumbnails">
 				<li class="span5">
+					<a href="portfolioItems/AAS.html">
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/LxD-Transparent-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Active Air Suspension</p>
@@ -112,13 +113,16 @@
 				</li>
 
 				<li class="span5">
-					<div class="thumbnail" id="portfolioItem">
-						<img src="img/LxD-Transparent-200x200.jpg" alt="">
-						<p id="portfolioBoardText">OptimumK</p>
-					</div>
+					<a href="portfolioItems/OptimumK.html">
+						<div class="thumbnail" id="portfolioItem">
+							<img src="img/LxD-Transparent-200x200.jpg" alt="">
+							<p id="portfolioBoardText">OptimumK</p>
+						</div>
+					</a>
 				</li>
 					
 				<li class="span5">
+					<a href="portfolioItems/PCU.html">
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/PCU-200x200.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
 						<p id="portfolioBoardText">Pneumatic Control Units</p>
@@ -126,6 +130,7 @@
 				</li>
 				
 				<li class="span5">
+					<a href="portfolioItems/ValvesActuators.html">
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/IMG_0370.jpg" alt="" id="portfolioBoardImage">
 						<p id="portfolioBoardText">Valves and Actuators</p>
@@ -133,12 +138,14 @@
 				</li>
 
 				<li class="span5">
+					<a href="portfolioItems/FSAE.html">
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/FSAE-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Formula SAE</p>
 					</div>
 
 				<li class="span5">
+					<a href="portfolioItems/SwitchPlate.html">
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/SwitchPlate-200x200.jpg" alt="">
 						<p id="portfolioBoardText">Switch Plates</p>
