--- a/index.html
+++ b/index.html
@@ -38,72 +38,32 @@
 
 
 	<div class="tabbable tabs-left"> 
-	  <ul class="nav nav-tabs">
-	    <li class="active"><a href="#portfolio" data-toggle="tab">PORTFOLIO</a></li>
-	    <li><a href="#resume" data-toggle="tab">RESUME</a></li>
-	    <li><a href="#contact" data-toggle="tab">CONTACT</a></li>
-	  </ul>
-	  <div class="tab-content">
-	    <div class="tab-pane active" id="portfolio">
-	    	<div class="span10">
-				<ul class="thumbnails">
-					<li class="span5">
-						<a href="portfolioItems/AAS.html">
-						<div class="thumbnail" id="portfolioItem">
-							<img src="img/LxD-Transparent-200x200.jpg" alt="">
-							<p id="portfolioBoardText">Active Air Suspension</p>
-						</div>
-					</li>
-
-					<li class="span5">
-						<a href="portfolioItems/OptimumK.html">
-							<div class="thumbnail" id="portfolioItem">
-								<img src="img/LxD-Transparent-200x200.jpg" alt="">
-								<p id="portfolioBoardText">OptimumK</p>
-							</div>
-						</a>
-					</li>
-						
-					<li class="span5">
-						<a href="portfolioItems/PCU.html">
-						<div class="thumbnail" id="portfolioItem">
-							<img src="img/PCU-200x200.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
-							<p id="portfolioBoardText">Pneumatic Control Units</p>
-						</div>
-					</li>
-					
-					<li class="span5">
-						<a href="portfolioItems/ValvesActuators.html">
-						<div class="thumbnail" id="portfolioItem">
-							<img src="img/IMG_0370.jpg" alt="" id="portfolioBoardImage">
-							<p id="portfolioBoardText">Valves and Actuators</p>
-						</div>
-					</li>
-
-					<li class="span5">
-						<a href="portfolioItems/FSAE.html">
-						<div class="thumbnail" id="portfolioItem">
-							<img src="img/FSAE-200x200.jpg" alt="">
-							<p id="portfolioBoardText">Formula SAE</p>
-						</div>
-
-					<li class="span5">
-						<a href="portfolioItems/SwitchPlate.html">
-						<div class="thumbnail" id="portfolioItem">
-							<img src="img/SwitchPlate-200x200.jpg" alt="">
-							<p id="portfolioBoardText">Switch Plates</p>
-						</div>
-					</li>
-				</ul>
-			</div>
-	    </div>
-	    <div class="tab-pane" id="resume">
-	      <p>Howdy, I'm in Section 2.</p>
-	    </div>
-	    <div class="tab-pane" id="contact">
-	      <p>Howdy, I'm in Section 3.</p>
-	    </div>
-	  </div>
+		<ul class="nav nav-tabs">
+	    	<li class="active"><a href="#portfolio" data-toggle="tab">PORTFOLIO</a></li>
+	    	<li><a href="#resume" data-toggle="tab">RESUME</a></li>
+	    	<li><a href="#contact" data-toggle="tab">CONTACT</a></li>
+	  	</ul>
+	 	<div class="tab-content">
+	    	<div class="tab-pane active" id="portfolio">
+	    		<div class="span12">
+		    		<div class="span5">
+			    		<img src="img/PCU-200x200.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
+			    	</div>
+			    	<div class="span5">
+			    		<img src="img/IMG_0370.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
+			    	</div>
+			    	<div class="span5">
+			    		<img src="img/IMG_0370.jpg" alt="LxD Assembly" height="200px" id="portfolioBoardImage" />
+			    	</div>
+			    </div>
+	    	</div>
+		    <div class="tab-pane" id="resume">
+		      	<p>Howdy, I'm in Section 2.</p>
+		    </div>
+		    <div class="tab-pane" id="contact">
+		      	<p>Howdy, I'm in Section 3.</p>
+		    </div>
+		 </div>
 	</div>
 
 	<!-- Le javascript
