added top nav bar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
 
     
 <body>
+
+
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" id="siteTitle" href="#">Clay Corbett</a>
+				<ul class="nav">
+					<li class="active">
+						<a href="#portfolio">PORTFOLIO</a>
+					</li>
+					<li><a href="#resume">RESUME</a></li>
+					<li><a href="#contact">CONTACT</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		<div class="span12">
 			<h1 id="siteTitle">Clay Corbett</h1>
