formatting tweaks, added some item descriptions

--- a/index.html
+++ b/index.html
@@ -59,27 +59,38 @@
 	<div class="container">
 			<ul class="thumbnails">
 				<li class="span4">
-					<a href="portfolioItems/AAS.html">
 					<div class="thumbnail" id="portfolioItem">
-						<img src="img/LxD-Transparent-200x200.jpg" alt="">
-						<p id="portfolioBoardTitle">Active Air Suspension</p>
+						<a href="portfolioItems/AAS.html">
+							<img src="img/LxD-Transparent-200x200.jpg" alt="">
+							<p id="portfolioBoardTitle">Active Air Suspension</p>
+						</a>
+						<p id="portfolioBoardText">
+							An air suspension system that is capable of adjusting 
+							to varying conditions and driving styles on the fly. I designed modules for a range of applications, from performance cars to commercial vehicles.
+						</p>
 					</div>
 				</li>
 
 				<li class="span4">
-					<a href="portfolioItems/OptimumK.html">
 						<div class="thumbnail" id="portfolioItem">
-							<img src="img/LxD-Transparent-200x200.jpg" alt="">
-							<p id="portfolioBoardTitle">OptimumK</p>
+							<a href="portfolioItems/OptimumK.html">
+								<img src="img/LxD-Transparent-200x200.jpg" alt="">
+								<p id="portfolioBoardTitle">OptimumK</p>
+							</a>
+							<p id="portfolioBoardText">
+								OptimumK is a tool for simulating and analyzing automotive suspensions. I did significant development work on the interface and wrote some of the key algorithms.
+
+							</p>
 						</div>
 					</a>
 				</li>
 					
 				<li class="span4">
-					<a href="portfolioItems/PCU.html">
 					<div class="thumbnail" id="portfolioItem">
-						<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage" />
-						<p id="portfolioBoardTitle">Pneumatic Control Units</p>
+						<a href="portfolioItems/PCU.html">
+							<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage" />
+							<p id="portfolioBoardTitle">Pneumatic Control Units</p>
+						</a>
 						<p id="portfolioBoardText">
 							Air suspension system that decouples control of vehicle
 							ride height and spring stiffness and allows for active 
