--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Le styles -->
 
     <link href="css/claycorbett.com.css" rel="stylesheet">
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
 
      <!-- Le fav and touch icons -->
@@ -47,7 +47,7 @@
 						<li class="active">
 							<a id="categoryLinksSelected" href="#portfolio">PORTFOLIO</a>
 						</li>
-						<li><a id="categoryLinks" href="#resume">RESUME</a></li>
+						<li><a id="categoryLinks" href="docs/corbett - resume - web.pdf">RESUME</a></li>
 						<li><a id="categoryLinks" href="#contact">CONTACT</a></li>
 					</ul>
 				</div>
@@ -61,7 +61,7 @@
 				<li class="span4">
 					<div class="thumbnail" id="portfolioItem">
 						<a href="portfolioItems/AAS.html">
-							<img src="img/LxD-Transparent-200x200.jpg" alt="">
+							<img src="img/PCU-290x217.jpg" alt="">
 							<p id="portfolioBoardTitle">Active Air Suspension</p>
 						</a>
 						<p id="portfolioBoardText">
@@ -72,38 +72,38 @@
 				</li>
 
 				<li class="span4">
-						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/OptimumK.html">
-								<img src="img/LxD-Transparent-200x200.jpg" alt="">
-								<p id="portfolioBoardTitle">OptimumK</p>
-							</a>
-							<p id="portfolioBoardText">
-								OptimumK is a tool for simulating and analyzing automotive suspensions. I did significant development work on the interface and wrote some of the key algorithms.
-
-							</p>
-						</div>
-					</a>
+					<div class="thumbnail" id="portfolioItem">
+						<a href="portfolioItems/OptimumK.html">
+							<img src="img/PCU-290x217.jpg" alt="">
+							<p id="portfolioBoardTitle">OptimumK</p>
+						</a>
+						<p id="portfolioBoardText">
+							OptimumK is a tool for simulating and analyzing automotive suspensions. I did significant development work on the interface and wrote some of the key algorithms.
+						</p>
+					</div>
 				</li>
 					
 				<li class="span4">
 					<div class="thumbnail" id="portfolioItem">
 						<a href="portfolioItems/PCU.html">
-							<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage" />
+							<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage">
 							<p id="portfolioBoardTitle">Pneumatic Control Units</p>
 						</a>
 						<p id="portfolioBoardText">
-							Air suspension system that decouples control of vehicle
-							ride height and spring stiffness and allows for active 
-							control of each. 
+							These units are at the heart of a number of pneumtic systems on commercial vehicles. The enclosed controller and valves make possible systems that respond to changing conditions and driver inputs.
 						</p>
 					</div>
 				</li>
 				
 				<li class="span4">
-					<a href="portfolioItems/ValvesActuators.html">
 					<div class="thumbnail" id="portfolioItem">
-						<img src="img/LxD-290x217.jpg" alt="" id="portfolioBoardImage">
-						<p id="portfolioBoardTitle">Valves and Actuators</p>
+						<a href="portfolioItems/ValvesActuators.html">
+							<img src="img/LxD-290x217.jpg" alt="" id="portfolioBoardImage">
+							<p id="portfolioBoardTitle">Valves and Actuators</p>
+						</a>
+						<p id="portfolioBoardText">
+							I have designed a number of valves and pneumatically driven actuators for use in automotive aplications. 
+						</p>
 					</div>
 				</li>
 
@@ -112,6 +112,9 @@
 					<div class="thumbnail" id="portfolioItem">
 						<img src="img/FSAE-290x217.jpg" alt="">
 						<p id="portfolioBoardTitle">Formula SAE</p>
+						<p id="portfolioBoardText">
+							I was a member of my University's Formula SAE team for five years. 
+						</p>
 					</div>
 
 				<li class="span4">
