added copy, fixed layout issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
  
 
-    <!-- // <script type="text/javascript" src="http://fast.fonts.com/jsapi/8c302fa7-7a80-4b8b-a3d5-8d8fba4a7d13.js"></script> -->
+    <script type="text/javascript" src="http://fast.fonts.com/jsapi/8c302fa7-7a80-4b8b-a3d5-8d8fba4a7d13.js"></script>
 
  </head>
 
@@ -62,8 +62,8 @@
 				<ul class="thumbnails">
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/AAS.html">
-								<img src="img/LxD-Transparent-200x200.jpg" alt="">
+							<a id="portfolioItemLink" href="portfolioItems/AAS.html">
+								<img src="img/PCU-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Active Air Suspension</p>
 							</a>
 							<p id="portfolioBoardText">
@@ -75,8 +75,8 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/OptimumK.html">
-								<img src="img/LxD-Transparent-200x200.jpg" alt="">
+							<a id="portfolioItemLink" href="portfolioItems/OptimumK.html">
+								<img src="img/PCU-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">OptimumK</p>
 							</a>
 							<p id="portfolioBoardText">
@@ -87,7 +87,7 @@
 						
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/PCU.html">
+							<a id="portfolioItemLink" href="portfolioItems/PCU.html">
 								<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage" />
 								<p id="portfolioBoardTitle">Pneumatic Control Units</p>
 							</a>
@@ -99,31 +99,36 @@
 					
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/ValvesActuators.html">
+							<a id="portfolioItemLink" href="portfolioItems/ValvesActuators.html">
 								<img src="img/LxD-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Valves and Actuators</p>
 							</a>
 							<p id="portfolioBoardText">
-								I have designed a number of valves and pneumatically driven actuators for use in automotive aplications. 
+								My design work includes a number of valves and pneumatically driven actuators for use in automotive applications. Achieveng the necessary motion while meeting packaging requirements has been a consistent challenge. 
 							</p>
 						</div>
 					</li>
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/FSAE.html">
-								<img src="img/FSAE-290x217.jpg" alt="">
-								<p id="portfolioBoardTitle">Formula SAE</p>
+							<a id="portfolioItemLink" href="portfolioItems/FSAE.html">
+								<img src="img/FSAE-290x217.jpg" alt="" id="portfolioBoardImage">
+								<h1 id="portfolioBoardTitle">Formula SAE</h1>
 							</a>
+							<p id="portfolioBoardText">
+								Formula SAE is a student competition to design and build a small race car for an annual international competition. I designed many components, was deeply involved in testing.
+							</p>
 						</div>
 					</li>
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a href="portfolioItems/SwitchPlate.html">
-								<img src="img/SwitchPlate-290x217.jpg" alt="">
+							<a id="portfolioItemLink" ref="portfolioItems/SwitchPlate.html">
+								<img src="img/SwitchPlate-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Switch Plates</p>
 							</a>
+							<p id="portfolioBoardText">
+								As my team developed prototype suspension systems for cars, we needed to add controls in the cabin. Using data fro a 3D scanner, I was able to match the existing curvature of the dash to add controls that appeard to be original.
 						</div>
 					</li>
 				</ul>
