updated for typekit

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
  
-
+    <!-- Fonts.com webfonts -->
     <script type="text/javascript" src="http://fast.fonts.com/jsapi/8c302fa7-7a80-4b8b-a3d5-8d8fba4a7d13.js"></script>
+
+    <!-- Typekit -->
+    <script type="text/javascript" src="http://use.typekit.com/gyy2dwc.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
  </head>
 
