more typekit fonts

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="thumbnail" id="portfolioItem">
 							<a id="portfolioItemLink" href="portfolioItems/FSAE.html">
 								<img src="img/FSAE-290x217.jpg" alt="" id="portfolioBoardImage">
-								<h1 id="portfolioBoardTitle">Formula SAE</h1>
+								<p id="portfolioBoardTitle">Formula SAE</p>
 							</a>
 							<p id="portfolioBoardText">
 								Formula SAE is a student competition to design and build a small race car for an annual international competition. I designed many components, was deeply involved in testing.
