added a portfolio item (fsae)

--- a/fsae.html
+++ b/fsae.html
@@ -9,8 +9,8 @@
 
     <!-- Le styles -->
 
-    <link href="stylesheets/css/claycorbett.com.css" rel="stylesheet">
-    <link href="stylesheets/css/bootstrap.css" rel="stylesheet">
+    <link href="../stylesheets/claycorbett.com.css" rel="stylesheet">
+    <link href="../stylesheets/bootstrap.css" rel="stylesheet">
 
 
      <!-- Le fav and touch icons -->
@@ -62,13 +62,10 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="span12">
-				<h1>Welcome to claycorbett.com</h1>
-				<p>There are a only a few things here so far.</p>
-				<p>One of them is my <a href="portfolio.html">portfolio of work</a></p>
-				<p>Another is my <a href="docs/corbett - resume - web.pdf">resumé</a></p>
-				<p>Also, feel free to <a href="contact.html">contact</a> me</p>
-				
+			<div class="span10 offset1">
+				<img src="../img/fsae/imi.jpg" />
+
+
 			</div>
 		</div>
 	</div>
