--- a/portfolio.html
+++ b/portfolio.html
@@ -9,8 +9,8 @@
 
     <!-- Le styles -->
 
-    <link href="css/claycorbett.com.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="stylesheets/css/claycorbett.com.css" rel="stylesheet">
+    <link href="stylesheets/css/bootstrap.css" rel="stylesheet">
 
 
      <!-- Le fav and touch icons -->
@@ -45,14 +45,14 @@
 		            <span class="icon-bar"></span>
 		            <span class="icon-bar"></span>
           		</a>
-				<a class="brand pull-left" id="siteTitle" href="#">Clay Corbett</a>
+				<a class="brand pull-left" id="siteTitle" href="index.html">Clay Corbett</a>
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li class="active">
-							<a id="categoryLinksSelected" href="#portfolio">PORTFOLIO</a>
+							<a id="categoryLinksSelected" href="portfolio.html">PORTFOLIO</a>
 						</li>
 						<li><a id="categoryLinks" href="docs/corbett - resume - web.pdf">RESUME</a></li>
-						<li><a id="categoryLinks" href="#contact">CONTACT</a></li>
+						<li><a id="categoryLinks" href="contact.html">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -115,7 +115,7 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/FSAE.html">
+							<a id="portfolioItemLink" href="portfolioItems/fsae.html">
 								<img src="img/FSAE-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Formula SAE</p>
 							</a>
