--- a/portfolioitems/fsae.html
+++ b/portfolioitems/fsae.html
@@ -9,8 +9,8 @@
 
     <!-- Le styles -->
 
-    <link href="stylesheets/css/claycorbett.com.css" rel="stylesheet">
-    <link href="stylesheets/css/bootstrap.css" rel="stylesheet">
+    <link href="../stylesheets/css/claycorbett.com.css" rel="stylesheet">
+    <link href="../stylesheets/css/bootstrap.css" rel="stylesheet">
 
 
      <!-- Le fav and touch icons -->
@@ -49,10 +49,10 @@
 				<div class="nav-collapse">
 					<ul class="nav">
 						<li class="active">
-							<a id="categoryLinksSelected" href="portfolio.html">PORTFOLIO</a>
+							<a id="categoryLinksSelected" href="../portfolio.html">PORTFOLIO</a>
 						</li>
-						<li><a id="categoryLinks" href="docs/corbett - resume - web.pdf">RESUME</a></li>
-						<li><a id="categoryLinks" href="contact.html">CONTACT</a></li>
+						<li><a id="categoryLinks" href="../docs/corbett - resume - web.pdf">RESUME</a></li>
+						<li><a id="categoryLinks" href="../contact.html">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -62,15 +62,26 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="span12">
-				<h1>Welcome to claycorbett.com</h1>
-				<p>There are a only a few things here so far.</p>
-				<p>One of them is my <a href="portfolio.html">portfolio of work</a></p>
-				<p>Another is my <a href="docs/corbett - resume - web.pdf">resumé</a></p>
-				<p>Also, feel free to <a href="contact.html">contact</a> me</p>
-				
+			<div class="span10 offset1">
+				<img src="../img/fsae/imi.jpg" />	
+                <div class="span8 offset1">
+                    <p>
+                        Here is the car running at IMI on a test day. There are some benefits to testing in Colorado.
+                    </p>
+                </div>
 			</div>
 		</div>
+
+        <div class="row">
+            <div class="span10 offset1">
+                <img src="../img/fsae/front_suspension.jpg" />   
+                <div class="span8 offset1">
+                    <p>
+                        The front suspension of the 2004 car. 
+                    </p>
+                </div>
+            </div>
+        </div>
 	</div>
 
 	<!-- Le javascript
