--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 
 
-	<div class="navbar navbar-fixed-top">
+	<!-- Commented out for now. not ready to go live.
+	 <div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -72,7 +73,7 @@
 			</div>
 		</div>
 	</div>
-
+ -->
 	<!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
