--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 	
 
 	<div class="container">
-		<div class="row">
+		<div class="row-fluid">
 			<div class="span12">
 				<ul class="thumbnails">
 					<li class="span4">
@@ -84,7 +84,7 @@
 								<p id="portfolioBoardTitle">OptimumK</p>
 							</a>
 							<p id="portfolioBoardText">
-								OptimumK is a tool that lets automotive engineers quickly simulate suspension designs to learn how they will perform. I worked on the design and development of the interface and wrote some of the key solver algorithms.
+								OptimumK is a tool that lets automotive engineers quickly simulate suspension designs to learn how they will perform. I worked on the design and development of the interface and wrote some of the key algorithms.
 							</p>
 						</div>
 					</li>
