--- a/portfolioitems/fsae.html
+++ b/portfolioitems/fsae.html
@@ -58,28 +58,36 @@
 			</div>
 		</div>
 	</div>
+
+    
 	
 
 	<div class="container">
+        <span>←</span>
+        <a href="../index.html">Home</a>
+        <span class="divider">/</span>
+        <a href="../portfolio.html">Portfolio</a>
+        <span class="divider">/</span>
+        <span>FSAE</span>
+        <br />
+        <p></p>
+        
+    </ul>
 		<div class="row">
 			<div class="span10 offset1">
-				<img src="../img/fsae/imi.jpg" />	
-                <div class="span8 offset1">
-                    <p>
-                        Here is the car running at IMI on a test day. There are some benefits to testing in Colorado.
-                    </p>
-                </div>
+				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
+                <p id="portfolioItemPageText">
+                    Here is the car running at IMI on a test day. There are some benefits to testing in Colorado.
+                </p>
 			</div>
 		</div>
 
         <div class="row">
             <div class="span10 offset1">
-                <img src="../img/fsae/front_suspension.jpg" />   
-                <div class="span8 offset1">
-                    <p>
-                        The front suspension of the 2004 car. 
-                    </p>
-                </div>
+                <img id="portfolioItemPageImage" src="../img/fsae/front_suspension.jpg" />   
+                <p id="portfolioItemPageText">
+                    The front suspension of the 2004 car. 
+                </p>
             </div>
         </div>
 	</div>
