added to the fsae page

--- a/portfolioitems/fsae.html
+++ b/portfolioitems/fsae.html
@@ -77,7 +77,7 @@
 			<div class="span10 offset1">
 				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
                 <p id="portfolioItemPageText">
-                    Here is the car running at IMI on a test day. There are some benefits to testing in Colorado.
+                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program where I worked on engine tuning, suspension setup and data acquisition.
                 </p>
 			</div>
 		</div>
@@ -87,6 +87,15 @@
                 <img id="portfolioItemPageImage" src="../img/fsae/front_suspension.jpg" />   
                 <p id="portfolioItemPageText">
                     The front suspension of the 2004 car. 
+                </p>
+            </div>
+        </div>
+
+          <div class="row">
+            <div class="span10 offset1">
+                <img id="portfolioItemPageImage" src="../img/fsae/exhaust.jpg" />   
+                <p id="portfolioItemPageText">
+                    I designed the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
                 </p>
             </div>
         </div>
