--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
 							<a id="portfolioItemLink" href="portfolioItems/AAS.html">
-								<img src="img/PCU-290x217.jpg" alt="" id="portfolioBoardImage">
+								<img src="img/AAS/AAS-iso-217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Active Air Suspension</p>
 							</a>
 							<p id="portfolioBoardText">
