--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
 				<ul class="thumbnails">
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/AAS.html">
+							<a id="portfolioItemLink" href="portfolioitems/AAS.html">
 								<img src="img/AAS/AAS-iso-217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Active Air Suspension</p>
 							</a>
@@ -79,7 +79,7 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/OptimumK.html">
+							<a id="portfolioItemLink" href="portfolioitems/OptimumK.html">
 								<img src="img/PCU-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">OptimumK</p>
 							</a>
@@ -91,7 +91,7 @@
 						
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/PCU.html">
+							<a id="portfolioItemLink" href="portfolioitems/PCU.html">
 								<img src="img/PCU-290x217.jpg" alt="LxD Assembly"  id="portfolioBoardImage" />
 								<p id="portfolioBoardTitle">Pneumatic Control Units</p>
 							</a>
@@ -103,7 +103,7 @@
 					
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/ValvesActuators.html">
+							<a id="portfolioItemLink" href="portfolioitems/ValvesActuators.html">
 								<img src="img/LxD-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Valves and Actuators</p>
 							</a>
@@ -115,7 +115,7 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" href="portfolioItems/fsae.html">
+							<a id="portfolioItemLink" href="portfolioitems/fsae.html">
 								<img src="img/FSAE-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Formula SAE</p>
 							</a>
@@ -127,7 +127,7 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" ref="portfolioItems/SwitchPlate.html">
+							<a id="portfolioItemLink" ref="portfolioitems/SwitchPlate.html">
 								<img src="img/SwitchPlate-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Switch Plates</p>
 							</a>
