--- a/portfolioitems/fsae.html
+++ b/portfolioitems/fsae.html
@@ -77,7 +77,7 @@
 			<div class="span10 offset1">
 				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
                 <p id="portfolioItemPageText">
-                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program where I worked on engine tuning, suspension setup and data acquisition.
+                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program, working on engine tuning, suspension setup and data acquisition.
                 </p>
 			</div>
 		</div>
@@ -95,7 +95,16 @@
             <div class="span10 offset1">
                 <img id="portfolioItemPageImage" src="../img/fsae/exhaust.jpg" />   
                 <p id="portfolioItemPageText">
-                    I designed the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
+                    I designed (and fabricated) the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="span10 offset1">
+                <img id="portfolioItemPageImage" src="../img/fsae/2005.jpg" />   
+                <p id="portfolioItemPageText">
+                    The 2005 car with the exhaust system visable. This was a similar design to the previous year's with a few minor changes based on lessons learned in 2004. 
                 </p>
             </div>
         </div>
