added portfolio pages (PCU page still needs work)

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
 							<a id="portfolioItemLink" href="portfolioitems/OptimumK.html">
-								<img src="img/PCU-290x217.jpg" alt="" id="portfolioBoardImage">
+								<img src="img/OptimumK/opk-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">OptimumK</p>
 							</a>
 							<p id="portfolioBoardText">
@@ -127,12 +127,13 @@
 
 					<li class="span4">
 						<div class="thumbnail" id="portfolioItem">
-							<a id="portfolioItemLink" ref="portfolioitems/SwitchPlate.html">
+							<a id="portfolioItemLink" href="portfolioitems/SwitchPlate.html">
 								<img src="img/SwitchPlate-290x217.jpg" alt="" id="portfolioBoardImage">
 								<p id="portfolioBoardTitle">Switch Plates</p>
 							</a>
 							<p id="portfolioBoardText">
 								As my team developed prototype suspension systems for cars, we needed to add controls in the cabin. Using data fro a 3D scanner, I was able to match the existing curvature of the dash to add controls that appeard to be original.
+							</p>
 						</div>
 					</li>
 				</ul>
