--- a/portfolioitems/AAS.html
+++ b/portfolioitems/AAS.html
@@ -64,34 +64,35 @@
 
 	<div class="container">
         <span>←</span>
-        <a href="../index.html">Home</a>
-        <span class="divider">/</span>
         <a href="../portfolio.html">Portfolio</a>
         <span class="divider">/</span>
         <span>Active Air Suspension</span>
         <br />
         <p></p>
         
-    </ul>
 		<div class="row">
 			<div class="span10 offset1">
 				<img id="portfolioItemPageImage" src="../img/AAS/AAS-iso-full.jpg" />	
-                <p id="portfolioItemPageText">
-                    An active air suspension module. The spring work like a conventional rolling lobe air spring where a rubber bellow rolls along a piston to compresses the internal air. The active system places a rubber sleeve over the piston that can be inflated to change the piston's shape. Inflating the piston causes an increase in the stiffness of the spring.
-                </p> 
+                <div class="span8 offset1">
+                    <p id="portfolioItemPageText">
+                        An active air suspension module. The spring work like a conventional rolling lobe air spring where a rubber bellow rolls along a piston to compresses the internal air. The active system places a rubber sleeve over the piston that can be inflated to change the piston's shape. Inflating the piston causes an increase in the stiffness of the spring.
+                    </p> 
 
-                <p id="portfolioItemPageText">
-                    I completed the mechanical design of active air systems for a number of applications including high-performance passenger cars and commercial vehicles. Specifically, I determined the spring geometry required to meet performance requirements then competed the detail design of necessary components.
-                </p>
+                    <p id="portfolioItemPageText">
+                        I completed the mechanical design of active air systems for a number of applications including high-performance passenger cars and commercial vehicles. Specifically, I determined the spring geometry required to meet performance requirements then competed the detail design of necessary components.
+                    </p>
+                </div>
 			</div>
 		</div>
 
         <div class="row">
             <div class="span10 offset1">
-                <iframe src="http://player.vimeo.com/video/43647072?title=0&amp;byline=0&amp;loop=1" width="800" height="600" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
-                <p id="portfolioItemPageText">
-                    This video shows the motion of a typical Active Air Suspension module. During the section view, the inflation of the piston is visable. This type of piston inflation allows for active control of the stiffness as well as the vehicle's ride height. 
-                </p>
+                <iframe src="http://player.vimeo.com/video/43647072?title=0&amp;byline=0&amp;portrait=0&amp;loop=1" width="800" height="600" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
+                <div class="span8 offset1">
+                    <p id="portfolioItemPageText">
+                        This video shows the motion of a typical Active Air Suspension module. During the section view, the inflation of the piston is visable. This type of piston inflation allows for active control of the stiffness as well as the vehicle's ride height. 
+                    </p>
+                </div>
             </div>
         </div>
 
