--- a/portfolioitems/PCU.html
+++ b/portfolioitems/PCU.html
@@ -13,12 +13,12 @@
     <link href="../stylesheets/css/bootstrap.css" rel="stylesheet">
 
 
-     <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.ico">
+   <!--   
+    <link rel="shortcut icon" href="../img/ccc.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png"> -->
  
     <!-- Fonts.com webfonts -->
     <script type="text/javascript" src="http://fast.fonts.com/jsapi/8c302fa7-7a80-4b8b-a3d5-8d8fba4a7d13.js"></script>
@@ -64,50 +64,24 @@
 
 	<div class="container">
         <span>←</span>
-        <a href="../index.html">Home</a>
-        <span class="divider">/</span>
         <a href="../portfolio.html">Portfolio</a>
         <span class="divider">/</span>
-        <span>FSAE</span>
+        <span>PCU</span>
         <br />
         <p></p>
         
     </ul>
-		<div class="row">
-			<div class="span10 offset1">
-				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
-                <p id="portfolioItemPageText">
-                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program, working on engine tuning, suspension setup and data acquisition.
-                </p>
-			</div>
-		</div>
-
         <div class="row">
             <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/front_suspension.jpg" />   
-                <p id="portfolioItemPageText">
-                    The front suspension of the 2004 car. 
-                </p>
+                <img id="portfolioItemPageImage" src="../img/PCU/DSC_1856.JPG" />   
+                <div class="span8 offset1">
+                    <p id="portfolioItemPageText">
+                        This is a transparent display version of one of the PCUs I worked on. You can see the pneumatically driven valves (aluminum, on the bottom), the solenoid driven valves (the black region in the middle), and the enclosed electronics. 
+                    </p>
+                </div>
             </div>
         </div>
-
-          <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/exhaust.jpg" />   
-                <p id="portfolioItemPageText">
-                    I designed (and fabricated) the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/2005.jpg" />   
-                <p id="portfolioItemPageText">
-                    The 2005 car with the exhaust system visable. This was a similar design to the previous year's with a few minor changes based on lessons learned in 2004. 
-                </p>
-            </div>
-        </div>
+		
 	</div>
 
 	<!-- Le javascript
