--- a/portfolioitems/SwitchPlate.html
+++ b/portfolioitems/SwitchPlate.html
@@ -64,50 +64,24 @@
 
 	<div class="container">
         <span>←</span>
-        <a href="../index.html">Home</a>
-        <span class="divider">/</span>
         <a href="../portfolio.html">Portfolio</a>
         <span class="divider">/</span>
-        <span>FSAE</span>
+        <span>Switch Plates</span>
         <br />
         <p></p>
         
-    </ul>
 		<div class="row">
 			<div class="span10 offset1">
-				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
-                <p id="portfolioItemPageText">
-                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program, working on engine tuning, suspension setup and data acquisition.
-                </p>
+				<img id="portfolioItemPageImage" src="../img/SwitchPlate/AASControls.jpg" />	
+                <div class="span8 offset1">
+                    <p id="portfolioItemPageText">
+                        This was a small but interesting project. We needed to create a place on the dash of a passenger car for controls for a prototype suspension system. I used a 3D scan of the dash make a plate that would fit into a pocket in the dash and match the curvature. The part was fabricated with a 3D printer. 
+                    </p>
+                </div>
 			</div>
 		</div>
 
-        <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/front_suspension.jpg" />   
-                <p id="portfolioItemPageText">
-                    The front suspension of the 2004 car. 
-                </p>
-            </div>
-        </div>
-
-          <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/exhaust.jpg" />   
-                <p id="portfolioItemPageText">
-                    I designed (and fabricated) the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/2005.jpg" />   
-                <p id="portfolioItemPageText">
-                    The 2005 car with the exhaust system visable. This was a similar design to the previous year's with a few minor changes based on lessons learned in 2004. 
-                </p>
-            </div>
-        </div>
+        
 	</div>
 
 	<!-- Le javascript
