--- a/portfolioitems/ValvesActuators.html
+++ b/portfolioitems/ValvesActuators.html
@@ -64,48 +64,55 @@
 
 	<div class="container">
         <span>←</span>
-        <a href="../index.html">Home</a>
-        <span class="divider">/</span>
         <a href="../portfolio.html">Portfolio</a>
         <span class="divider">/</span>
-        <span>FSAE</span>
+        <span>Valves and Actuators</span>
         <br />
         <p></p>
         
-    </ul>
 		<div class="row">
 			<div class="span10 offset1">
-				<img id="portfolioItemPageImage" src="../img/fsae/imi.jpg" />	
-                <p id="portfolioItemPageText">
-                    The 2004 CU FSAE car during testing at IMI Motorsports. I was deeply involved in the testing program, working on engine tuning, suspension setup and data acquisition.
-                </p>
+				<img id="portfolioItemPageImage" src="../img/LxD/LxD-Transparent.JPG" />	
+                <div class="span8 offset1">
+                    <p id="portfolioItemPageText">
+                        This above image is of a system designed to control the oil level in an axle. Decreasing the oil level during periods of lower loading results in greater vehicle efficiency. I designed multiple versions of valves and actuators for this system and also conducted much of the initial validation and testing. 
+                    </p>
+                </div>
 			</div>
 		</div>
 
         <div class="row">
             <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/front_suspension.jpg" />   
-                <p id="portfolioItemPageText">
-                    The front suspension of the 2004 car. 
-                </p>
+                <img id="portfolioItemPageImage" src="../img/LxD/IMG_0371.JPG" />  
+                <div class="span8 offset1"> 
+                    <p id="portfolioItemPageText">
+                        This is one of my valve designs. It sits at the bottom of a tank inside the axle and is driven by a cable connected to an external actuator. 
+                    </p>
+                </div>
             </div>
         </div>
 
-          <div class="row">
-            <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/exhaust.jpg" />   
-                <p id="portfolioItemPageText">
-                    I designed (and fabricated) the exhaust system on the 2004 and 2005 cars. An exhaust system requires certain tube lengths for proper tuning and one of the biggest challenges of exhaust system design is meeting the performance requirements while meeting geometric constraints set by the chassis, suspension and other critical systems.  
-                </p>
-            </div>
-        </div>
 
         <div class="row">
             <div class="span10 offset1">
-                <img id="portfolioItemPageImage" src="../img/fsae/2005.jpg" />   
-                <p id="portfolioItemPageText">
-                    The 2005 car with the exhaust system visable. This was a similar design to the previous year's with a few minor changes based on lessons learned in 2004. 
-                </p>
+                <img id="portfolioItemPageImage" src="../img/LxD/IMG_0370.JPG" />  
+                <div class="span8 offset1"> 
+                    <p id="portfolioItemPageText">
+                        Another view of the same valve
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="span10 offset1">
+                <iframe id="portfolioItemPageImage" src="http://player.vimeo.com/video/38608950?title=0&amp;byline=0&amp;portrait=0&amp;loop=1" width="500" height="706" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                <div class="span8 offset1"> 
+                    <p id="portfolioItemPageText">
+                        This was one of the early versions of the actuator intended to drive a rotary valve. This is a pneumatically driven rotary valve. This design completed initial testing, but ultimately we switched to a linear valve and actuator.
+                    </p>
+                </div>
             </div>
         </div>
 	</div>
